Add single commend in LAB4

--- a/LaTeX report/content/task_10_4.tex
+++ b/LaTeX report/content/task_10_4.tex
@@ -127,6 +127,8 @@ In the tuning process we decided to keep $ \bm R $ and $ \bm Q $ as diagonal mat
 	\label{fig:lab4_diff_Q_values}
 \end{figure}
 
+\todo[inline]{Plottet som viser tuning av elevation er helt borte, langt nede i teksten. Kanskje nice å skrive om den også?}
+
 Using the same approach as in \todo{cref lab 3 }the group tuned entry-by-entry in $ \bm Q $. In the end the best tuning was achieved using: 
 \begin{equation}\label{key}
 	\bm Q = \begin{bmatrix}
