Rewriting based on review

--- a/LaTeX report/content/task_10_2.tex
+++ b/LaTeX report/content/task_10_2.tex
@@ -17,7 +17,7 @@ The state-vector, $\bm x$ is defined as:
 \end{equation}
 where $\lambda$ is travel, $r$ is the travel rate, $p$ is pitch and $\dot{p}$ is pitch rate.
 
-The dynamic equations for the system was given in the problem description \todo{Add ref to page and paper}. These following equations were given:
+The dynamic equations for the system was given in the problem description \cite{ProblemDesc} \todo{Add ref to page and paper}. These following equations were given:
 \begin{subequations} \label{eq:lab2_states_eq}
 	\begin{align}
 		\dot \lambda &= r \\
