--- a/LaTeX report/content/task_10_3.tex
+++ b/LaTeX report/content/task_10_3.tex
@@ -1,7 +1,7 @@
 \documentclass[../main.tex]{subfiles}
 \begin{document}
 
-\section{Optimal Control of Pitch/Travel with Feedback (LQ)}
+\section{Optimal Control of Pitch/Travel with Feedback (LQ)}  \label{sec:lab3}
 In this task we add feedback to the optimal controller that we developed in \cref{kap:Part2OptimalControlWithoutFeedback}.
 
 \subsection{Motivation}
@@ -35,7 +35,7 @@ Here $ \Delta x = x - x^*$ and $\Delta u = u - u^*$ are deviations from the opti
 
 This formulation is an infinite horizon linear quadratic regulator which has a solution with a constant linear feedback gain, $K$ - which is exactly what was specified previously! Note that this regulator does not have any constraints.
 
-\subsubsection{Choosing the weights}
+\subsubsection{Choosing the weights} 
 The matrix $Q$ and the scalar $R$ are the weights of the optimalization problem. $Q$ determines how much state-deviations should be penalized, while $R$ determines how much input-deviation should be penalized. What needs to prioritized depends on the application.
 
 In this case the system is a helicopter where the goal is to control the travel of the helicopter. The travel is the most important state, while travelrate, pitch and pitchrate are secondary. Thus it makes sense to prioritize keeping travel close to the planned trajectory - it is of course not possible to keep all states close to the trajectory. This motivates a \textbf{state-weight} with relatively high value related to travel.
