Add MPC diagram

--- a/LaTeX report/content/task_10_3.tex
+++ b/LaTeX report/content/task_10_3.tex
@@ -89,7 +89,10 @@ Another issue is \textbf{existance of solutions} must be guaranteed for all situ
 
 \subsubsection{Modified Control Hierarchy with MPC}
 
-\missingfigure{Modified control hierarchy}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=0.7\linewidth]{content/MPC control hierarchy.png}
+\end{figure}
 
 \subsection{Experimental results}\label{sec:lab3_result}
 The group performed a host of controlled tests with different tunings within five different targets:
